# mandelbrot-set

./: .gitignore  README.md  meson.build  meson.options  requirements.txt
include/: shaders.hpp
include/glad/: glad.h
src/: main.cpp
src/glad/: glad.c
